log
Tue 21 Mar 2023 09:43:28 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   33 |     List *lista = (List *) malloc(sizeof(List));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
982dae4
Tue 21 Mar 2023 09:45:45 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
270accb
Tue 21 Mar 2023 09:50:10 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:17: error: statement with no effect [-Werror=unused-value]
   43 |   lista->current->next;
      |   ~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ef99f9
Tue 21 Mar 2023 09:51:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5861557
Tue 21 Mar 2023 09:55:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e7a17dd
Tue 21 Mar 2023 10:10:32 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f8e89e7
Tue 21 Mar 2023 10:10:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1f0036b
Tue 21 Mar 2023 10:11:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fac107e
Tue 21 Mar 2023 10:11:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4400258
Tue 21 Mar 2023 10:13:42 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
6e4051c
Tue 21 Mar 2023 10:15:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4af68a4
Tue 21 Mar 2023 10:20:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f2104f4
Tue 21 Mar 2023 10:20:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7aac8f7
Tue 21 Mar 2023 10:25:13 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
197275a
Tue 21 Mar 2023 10:25:44 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
5a3d1bf
Wed 22 Mar 2023 12:52:26 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:62:4: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   62 | if(lista == NULL || lista->current == NULL) return NULL;
      |    ^~~~~
      |    list
list.c:62:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
49126b1
Wed 22 Mar 2023 12:56:48 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
b8ef8f5
Wed 22 Mar 2023 01:00:50 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
45811f5
Wed 22 Mar 2023 01:01:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ee72f65
Wed 22 Mar 2023 01:04:30 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
e384c85
Wed 22 Mar 2023 01:06:56 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
a49f513
Thu 23 Mar 2023 01:48:26 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ad4d331
Thu 23 Mar 2023 01:49:04 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e5911d6
Thu 23 Mar 2023 05:50:16 PM UTC: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
8d53876
Thu 23 Mar 2023 05:55:06 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
7b4ef50
Thu 23 Mar 2023 05:58:40 PM UTC: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
aec8d6e
Thu 23 Mar 2023 06:12:21 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5d4a40f
Thu 23 Mar 2023 06:16:36 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
2e69ee3
Thu 23 Mar 2023 06:18:53 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3cbbeac
Thu 23 Mar 2023 06:19:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
f8b5cd3
Thu 23 Mar 2023 06:22:55 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
94a7f33
Thu 23 Mar 2023 06:32:15 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
3d747f6
